# doichain-core-rebase

./: .cproject  .gitignore  .project  Changes  DOICHAIN_CHANGES.md  Makefile.am  README.md  TODO  configure.ac  libdoichainconsensus.pc.in
contrib/: gitian-build.py
contrib/auxpow-sizes/: auxpow-sizes.py
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/init/: README.md  namecoind.conf  namecoind.init  namecoind.openrc  namecoind.openrcconf  namecoind.service
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/namecoin/: convertAddress.py  convertBechAddress.py  convertBechAddress.sh
doc/: Doxyfile.in  NamecoinBugs.txt  README.md  build-osx.md  build-unix.md  gitian-building.md  init.md  release-notes-namecoin.md  release-process.md
doc/man/: Makefile.am  doichain-tx.1  namecoin-cli.1  namecoin-qt.1  namecoin-wallet.1  namecoind.1
share/: setup.nsi.in
share/examples/: namecoin.conf
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  auxpow.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  core_write.cpp  init.cpp  miner.cpp  miner.h  pow.cpp  txdb.cpp  txmempool.cpp  txmempool.h  validation.cpp
src/bench/: .gitignore  bench_bitcoin.cpp  verify_script.cpp
src/consensus/: tx_verify.cpp
(+86 files in other folders)
